--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,10 +12,21 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      # - uses: wagoid/commitlint-github-action@v5
+      - uses: wagoid/commitlint-github-action@v5
       - uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  govulncheck_job:
+    needs: pre-build
+    runs-on: ubuntu-latest
+    name: Run govulncheck
+    steps:
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+            go-version-input: 1.20.6
+            go-package: ./...
 
   lint:
     needs: pre-build
