--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -16,6 +16,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  govulncheck_job:
+    needs: pre-build
+    runs-on: ubuntu-latest
+    name: Run govulncheck
+    steps:
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+            go-version-input: 1.20.6
+            go-package: ./...
   lint:
     needs: pre-build
     runs-on: ubuntu-latest
