--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
       - id: govulncheck
         uses: golang/govulncheck-action@v1
         with:
-            go-version-input: 1.20.6
+            go-version-input: 1.20.11
             go-package: ./...
 
   lint:
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20.x'
+          go-version: '1.20.11'
           cache: true
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
@@ -55,7 +55,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20.x'
+          go-version: '1.20.11'
           cache: false
       - name: gotest
         run: go test ./... -v -count 1 -timeout 5m
